# MultiLayerPerceptron.hs

./: README  nn.cabal  stack.yaml
src/: MLP.hs  Main.hs
