name:                         nn
version:                      0.1.0.0
build-type:                   Simple
cabal-version:                >= 1.10

executable nn
  hs-source-dirs:             src
  other-modules:              MLP
  main-is:                    Main.hs
  default-language:           Haskell2010
  build-depends:              base >= 4.7 && < 5,
                              random,
                              MonadRandom,
                              hmatrix >= 0.18.2.0,
                              gloss
